--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -49,7 +49,8 @@
         android:layout_height="wrap_content"
         android:clickable="true"
         android:onClick="openBuyCryptoScreen"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:ignore="OnClick">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -101,7 +102,8 @@
         android:clickable="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardViewBtc">
+        app:layout_constraintTop_toBottomOf="@+id/cardViewBtc"
+        tools:ignore="OnClick">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
